syntax = "proto3";

option csharp_namespace = "GrpcService";

package greet;
import "google/protobuf/wrappers.proto";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GreetWithTime(HelloRequest) returns (GreetingReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

// The response message With Greeting, Day,
message GreetingReply{
string greetingOfDay = 1;
string Day = 2;
string extraMessage = 3;
string Time = 4;
}
